css/main.css
html {
	box-sizing: border-box;
}

body {
	margin: 0;
	background-color: #f7dcb8;
}

h1 {
	text-align: center;
	background-color: teal;
	margin: 0;
	padding: 1em 0em 1em 0em;
	color: white;
}

h2 {
	text-align: center;
}

h3 {
	padding-left: .5em;
	padding-top: .5em;
}

.monuments {
	margin-top: 2%;
}

.sevenwonders {
	top: 30%;
	margin-left: 1em;
	width: 100%;
}

.bannertext {
	top: 50%;
	width: 100%;
	position: absolute;
}

.atlantistext {
	top: 50%;
	width: 100%;
	position: absolute;
}

nav {
	width: 100%;
	margin:0;
	padding:0;
}

ol {
	padding: 0;
	margin: 0;
}

.buttondiv {
	position: relative;
}

.buttons {
	padding: 0.2em ;
	width: 50%;
	text-align: center;
	font-size: 1em;
	color: white;
	background-color: #a8ae98;
	background-image: linear-gradient(to bottom, #6FC000, #388200);
	box-shadow: 0 2px 5px rgba(0, 0, 0, 1);
	position: absolute;
	left: 25%;
	bottom: -100px;

}

.pricebuttondiv {
	position: relative;
}

.pricebuttons {
	padding: 0.2em ;
	width: 50%;
	text-align: center;
	font-size: 1em;
	color: white;
	background-color: #a8ae98;
	background-image: linear-gradient(to bottom, #6FC000, #388200);
	box-shadow: 0 2px 5px rgba(0, 0, 0, 1);
	left: 50%;
	bottom: -100px;
	position: absolute;
}

nav li {
	list-style-type: none;
	text-decoration: none;
	display: inline-block;
	width: 24%;
	float: left;
	text-align: center;
}

nav li a {
	color: white;
	text-align: center;
	text-decoration: none;
	background-color: #2257be;
	margin: 0;
	width: 100%;
	padding: 0.5em;
	margin: 0;
	display: inline-block;
	border: solid 3px #1f3873;
	font-size: 1em;
}

li a {
	color: white;
	text-decoration: none;
	font-size: 1.5em;
	padding: 0.5em;
	float: left;
	width: 100%;
	border: solid 3px #1f3873;
}

li {
	display: inline-block;
}

.banner {
	background-image: url("../images/helen.jpg");
	background-repeat: no-repeat;
	background-size: 100%;
	padding-bottom: 30%;
	position: relative;
	clear: both;
	text-align: center;
	margin-bottom: 1.5em;
	color: white;
}

.sevenwonders {
	position: absolute;
}

.info1 {
	float: left;
	display: inline-block;
	width: 31.3333%;
	margin-left: 2%;
	margin-bottom: 4%;
}

.info2 {
	float: left;
	display: inline-block;
	width: 31.3333%;
	margin-left: 2%;
	margin-bottom: 4%;
}

.info3 {
	float: left;
	display: inline-block;
	width: 31.3333%;
	margin-left: 2%;
	margin-bottom: 4%;
}

img {
	width: 70%;
	position: relative;
	left: 15%;
	padding-top: 1em;
}

img {
	position: center;
}

.atlantismystery {
	background-image: url("../images/maroti.jpg");
	background-repeat: no-repeat;
	background-size: 100%;
	padding-bottom: 50%;
	position: relative;
	clear: both;
	text-align: center;
	margin-bottom: 1.5em;
	color: white;
}

.showtimes {
	padding: 0.5em ;
	width: 25%;
	text-align: center;
	font-size: 1.5em;
	color: white;
	background-color: gray;
	box-shadow: 0 2px 5px rgba(0, 0, 0, 1);
	position: relative;
	left: 25%;
	bottom: -100px;
	margin-bottom: 5px;
}

.showtimesbutton {
	position: absolute;
	left: 30%;
	top: 50%;
}

footer {
	background-color: teal;
	padding: 0.2em 0em 0.2em 0em;
}

